--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
 
+    <link rel="shortcut icon" href="./logo.png" type="image/x-icon"> 
+
     <title>Recipe_App</title>
   </head>
   <body>
